# code-primer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  install-man.sh  install.sh  pyproject.toml  test-lifecycle.sh
.github/workflows/: ci.yml  release.yml
claude-code/: CLAUDE-SNIPPET.md
claude-code/commands/: refresh-primer.md
literate-code-hooks4claude/: literate-summaries.json
src/: cli.rs  config.rs  main.rs  meta.rs  parser.rs  pipeline.rs  report.rs  summarizer.rs
src/literate_code/: cli.py  config.py  pipeline.py
src/literate_code/parsers/: base.py  go_parser.py  rust_parser.py
src/literate_code/summarizer/: anthropic_summarizer.py  base.py
