[package]
name = "code-primer"
version = "0.1.0"
edition = "2021"
description = "Prime your AI coding assistant with file-level codebase understanding — fewer tool calls, faster orientation"
license = "MIT"
repository = "https://github.com/INS-JVidal/code-primer"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Tree-sitter parsing
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"

# Async runtime + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing for --refresh
sha2 = "0.10"

# Error handling
anyhow = "1"

# File walking + glob
walkdir = "2"
globset = "0.4"

# Misc
hex = "0.4"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
