[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "literate-code"
version = "0.1.0"
description = "Generate natural language descriptions of source code at function-level granularity"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "anthropic>=0.40",
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
sql = ["sqlparse>=0.5"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
literate-code = "literate_code.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/literate_code"]
